# ergo-analytics-events-streaming

./: Cargo.toml  Dockerfile  docker-compose.yml
conf/: config.yml  log4rs.yaml
src/: event_source.rs  main.rs  models.rs
src/handlers/: proxy.rs
src/models/: kafka_event.rs  mempool_event.rs  tx_event.rs
