[package]
name = "events-streaming"
version = "0.1.0"
edition = "2021"
rust-version = "1.65.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
spectrum-offchain = { git = "https://github.com/spectrum-finance/spectrum-offchain-ergo", rev = "340626017c557e6921d4c0edc00d2d4ea3fb5ae5" }
ergo-chain-sync = { git = "https://github.com/spectrum-finance/spectrum-offchain-ergo", rev = "340626017c557e6921d4c0edc00d2d4ea3fb5ae5" }
ergo-mempool-sync = { git = "https://github.com/spectrum-finance/spectrum-offchain-ergo", rev = "340626017c557e6921d4c0edc00d2d4ea3fb5ae5" }
kafka = "0.9"
async-trait = "0.1.58"
base64 = "0.21.0"
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.88"
serde_yaml = "0.9"
ergo-lib = { git = "https://github.com/ergoplatform/sigma-rust", rev = "62b8dedc0577f01551b6f8be4585f39b028d70f7", features = ["json", "arbitrary"] }
isahc = { version = "1.7.2", features = ["json"] }
clap = { version = "4.0", features = ["derive"] }
log4rs = "1.2.0"
tokio = { version = "1.22.0", features = ["full"] }
futures = "0.3.25"
base16 = "0.2.1"
wasm-timer = "0.2.5"