[package]
name = "events-streaming"
version = "0.1.0"
edition = "2021"
rust-version = "1.67.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
spectrum-offchain = { git = "https://github.com/spectrum-finance/spectrum-offchain-ergo", rev = "b8d393eb11de030e9f0af4fba6c94b3907faa49c" }
ergo-chain-sync = { git = "https://github.com/spectrum-finance/spectrum-offchain-ergo", rev = "b8d393eb11de030e9f0af4fba6c94b3907faa49c" }
ergo-mempool-sync = { git = "https://github.com/spectrum-finance/spectrum-offchain-ergo", rev = "b8d393eb11de030e9f0af4fba6c94b3907faa49c" }
kafka = "0.9"
async-trait = "0.1.58"
base64 = "0.21.0"
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.88"
serde_yaml = "0.9"
ergo-lib = { version = "0.23", features = ["json", "arbitrary"] }
isahc = { version = "1.7.2", features = ["json"] }
clap = { version = "4.0", features = ["derive"] }
log4rs = "1.2.0"
tokio = { version = "1.22.0", features = ["full"] }
futures = "0.3.25"
base16 = "0.2.1"
wasm-timer = "0.2.5"
async-std = {version = "1.12.0", features = ["attributes"] }
log = "0.4.17"